--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,16 @@ after_success:
   - docker push ecommarato/multi-server
   - docker push ecommarato/multi-worker
   # tell EB to update
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: us-east-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-1-349322539507
+  bucket_path: docker-multi
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
