--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,30 @@
 version: '3'
 services:
-  # service names are like "domains" (example server:5000, client:3000)
   postgres:
     image: 'postgres:latest'
     environment:
-      - POSTGRES_PASSWORD:postgres_password
+      - POSTGRES_PASSWORD=postgres_password
   redis:
     image: 'redis:latest'
   nginx:
+    depends_on:
+      - api
+      - client
     restart: always
-    build: 
+    build:
       dockerfile: Dockerfile.dev
       context: ./nginx
     ports:
       - '3050:80'
-    depends_on:
-      - api
-      - client
   api:
+    depends_on:
+      - postgres
     build:
       dockerfile: Dockerfile.dev
       context: ./server
     volumes:
-      # don't map this
       - /app/node_modules
-      # map /app to our /server directory
       - ./server:/app
-    # env vars
-    # variableName=value - sets a variable in the container at run time
-    # variableName - value is taken from your computer
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -37,8 +33,6 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
-    depends_on:
-      - postgres
   client:
     stdin_open: true
     build:
@@ -48,12 +42,12 @@ services:
       - /app/node_modules
       - ./client:/app
   worker:
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     build:
       dockerfile: Dockerfile.dev
       context: ./worker
     volumes:
       - /app/node_modules
       - ./worker:/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
